Fix issue page being cut off in mobile landscape orientation.

--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ a {
 body {
   background-color: var(--cream);
   padding: 1.75rem 1rem;
-  height: 100vh;
+  min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
